# pid_detect

./: .gitignore  README.md  pyproject.toml
notebook/: class_metrics.txt  common.py  data_explore.ipynb  detection.ipynb  get_class_metrics.py  get_hough_metrics.py  pattern matching.ipynb  pipeline_detection.ipynb  svg_read.ipynb  text_detection.ipynb  text_detection_generic.ipynb  text_pr_recall.py
src/: generate_templates.py  text_ious.py
