[tool.poetry]
name = "pid_detection"
version = "0.1.0"
description = ""
authors = ["Pedro Freitas <pedro.sidra@senairs.org.br>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
opencv-python = ">4.0.0"
opencv-contrib-python = ">4.0.0"
matplotlib = "^3.5.1"
ipympl = "^0.9.1"
pandas = "^1.4.2"
PyQt5 = "^5.15.6"
scikit-image = "^0.19.2"
craft-text-detector = "^0.4.2"
pytesseract = "^0.3.9"
mapcalc = "^0.2.2"
mean-average-precision = "^2021.4.26"
mahotas = "^1.4.12"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
